--- a/package.json
+++ b/package.json
@@ -9,18 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "14.1.0",
-    "react": "^18",
-    "react-dom": "^18",
-    "styled-components": "^6.1.8"
+    "next": "15.3.2",
+    "next-seo": "^6.8.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "styled-components": "^6.1.18"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/node": "^22.15.20",
+    "@types/react": "^19.1.4",
+    "@types/react-dom": "^19.1.5",
     "@types/styled-components": "^5.1.34",
-    "eslint": "^8",
-    "eslint-config-next": "14.1.0",
-    "typescript": "^5"
+    "eslint": "^9.27.0",
+    "eslint-config-next": "15.3.2",
+    "typescript": "^5.8.3"
   }
 }
